# UnsafeYTools

./: .gitignore  README.md  generate.py  quickly_build.sh  requirements.txt  run.bat  run.sh  shader.glsl  shuffle.py  sound.py
cpp/: CMakeLists.txt  audio.h  hash.h  main.cpp  offset.h  shader.h  video.h
electron/: files.js  index.html  index.js  package-lock.json  package.json  preload.js  renderer.js  updater.js
offsets/: offset_map.json
